Add dist directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 # Compiled output
-/dist
+#/dist
 /tmp
 /out-tsc
 /bazel-out
@@ -44,3 +44,4 @@ Thumbs.db
 # CSS
 *.css.map
 *.css
+!dist/**/*.css
